--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,18 @@ ${PROJECT_SOURCE_DIR}/src/
 ${PROJECT_SOURCE_DIR}/include/
 )
 
-FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
+FIND_PACKAGE(Boost COMPONENTS system filesystem iostreams REQUIRED)
 
 set(NEEDED_LIBS
 ${Boost_FILESYSTEM_LIBRARY}
 ${Boost_SYSTEM_LIBRARY}
+${Boost_IOSTREAMS_LIBRARY}
 )
 
 file(GLOB SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 
-file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.h)
+file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.h
+${PROJECT_SOURCE_DIR}/include/*.hpp)
 
 SET(SOURCE_FILES ${SOURCE_FILES})
 SET(HEADER_FILES ${HEADER_FILES})
